Colocando validação e controller

--- a/app/Views/admin/form_add_noticia.ejs
+++ b/app/Views/admin/form_add_noticia.ejs
@@ -5,24 +5,33 @@
 			<title>Formulario de cadastro de Noticia</title>
 		</head>
 	<body>
+		<% if(validacao) { %>
+			<ul>
+				<% for (var i =0;i < validacao.length;i++){ %>
+				<li>
+					<%= validacao[i].msg  %>
+				</li>
+				<%}%>
+			</ul>
+			<% }%>
 
 		<h1>Adicionar noticia</h1>
 		<br>
 		<form action="/noticias/salvar" method="post" >
 		<label >Titulo</label>
-		<input type="text" id="titulo" name="titulo" placeholder="Titulo da Noticia">
+		<input type="text" id="titulo" name="titulo" value="<%=noticia.titulo%>" placeholder="Titulo da Noticia">
 		<br>
 		<label >Autor</label>
-		<input type="text" id="Autor" name="Autor" placeholder="Autor da Noticia">
+		<input type="text" id="Autor" name="Autor" value="<%=noticia.autor%>" placeholder="Autor da Noticia">
 		<br>
 		<label >Resumo</label>
-		<input type="text" id="resumo" name="Resumo" placeholder="Resumo da Noticia">
+		<input type="text" id="resumo" name="Resumo"  value="<%=noticia.resumo%>" placeholder="Resumo da Noticia">
 		<br>
 		<label >Data Noticia</label>
-		<input type="date" id="data_Noticia" name="data_Noticia" placeholder="Data da Noticia">
+		<input type="date" id="data_Noticia" name="data_Noticia"  value="<%=noticia.data_Noticia%>" placeholder="Data da Noticia">
 		<br>
 		<label >Noticia</label>
-		<textarea name="noticia" id="noticia" cols="30" rows="5"></textarea>
+		<textarea name="noticia" id="noticia" cols="30" rows="5"> <%= noticia.noticia %> </textarea>
 		<input type="submit" value="Emviar">
 
 		</form>
