--- a/app/Views/noticias/noticias.ejs
+++ b/app/Views/noticias/noticias.ejs
@@ -15,7 +15,7 @@
 			</tr>
 			<%for (var i=0;i < noticias.length;i++) {%>
 			<tr>
-				<td><%= noticias[i].id_noticias%></td>
+				<td><%= noticias[i].id_noticia%></td>
 				<td><%= noticias[i].titulo%></td>
 				
 			</tr>
