--- a/app/Views/admin/form_add_noticia.ejs
+++ b/app/Views/admin/form_add_noticia.ejs
@@ -1,40 +1,96 @@
-<!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Formulario de cadastro de Noticia</title>
-		</head>
+<!DOCTYPE HTML>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+
+		<title>Portal de notícias</title>
+		
+		<!-- JQuery -->
+		<script src="js/jquery-2.2.1.js"></script>
+
+		<!-- bootstrap - link cdn -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	
+		<!-- incluindo css -->
+		<link href="css/style.css" rel="stylesheet">
+
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" />
+	</head>
+
 	<body>
-		<% if(validacao) { %>
-			<ul>
-				<% for (var i =0;i < validacao.length;i++){ %>
-				<li>
-					<%= validacao[i].msg  %>
-				</li>
-				<%}%>
-			</ul>
-			<% }%>
 
-		<h1>Adicionar noticia</h1>
-		<br>
-		<form action="/noticias/salvar" method="post" >
-		<label >Titulo</label>
-		<input type="text" id="titulo" name="titulo" value="<%=noticia.titulo%>" placeholder="Titulo da Noticia">
-		<br>
-		<label >Autor</label>
-		<input type="text" id="Autor" name="Autor" value="<%=noticia.autor%>" placeholder="Autor da Noticia">
-		<br>
-		<label >Resumo</label>
-		<input type="text" id="resumo" name="Resumo"  value="<%=noticia.resumo%>" placeholder="Resumo da Noticia">
-		<br>
-		<label >Data Noticia</label>
-		<input type="date" id="data_Noticia" name="data_Noticia"  value="<%=noticia.data_Noticia%>" placeholder="Data da Noticia">
-		<br>
-		<label >Noticia</label>
-		<textarea name="noticia" id="noticia" cols="30" rows="5"> <%= noticia.noticia %> </textarea>
-		<input type="submit" value="Emviar">
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					
+					<img src="images/logo.png" />
+				</div>
 
-		</form>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="index.html">HOME</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
+
+	    <div class="container">
+		
+			<div class="row">
+				<div class="col-md-12">
+					<div class="alert alert-danger">
+						<strong>Atenção!</strong>
+						<ul>
+							<li>Título é obrigatório</li>
+							<li>Resumo é obrigatório</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+	    	<div class="row">
+	    		<div class="col-md-12">
+	    			<form>
+						<div class="form-group">
+							<label for="titulo">Título:</label>
+							<input type="text" class="form-control" id="titulo" name="titulo">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Resumo:</label>
+							<input type="text" class="form-control" id="resumo" name="resumo">
+						</div>
+						
+						<div class="form-group">
+							<label for="pwd">Autor:</label>
+							<input type="text" class="form-control" id="autor" name="autor">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Data:</label>
+							<input type="date" class="form-control" id="data_noticia" name="data_noticia">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Notícia:</label>
+							<textarea class="form-control" id="noticia" name="noticia"></textarea>
+						</div>
+
+
+						<button type="submit" class="btn btn-default">Cadastrar</button>
+						</form>
+		    	</div>
+	    	</div>
+	    </div>
+	
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
 	</body>
 </html>
