--- a/app/Views/home/index.ejs
+++ b/app/Views/home/index.ejs
@@ -60,56 +60,16 @@
 			<% for(var i =2; i< noticias.length; i++){ %>
 				<div class="col-md-4">
 					<div class="noticia_wrapper">
-						<span class="noticia_autor"> <%= noticia[i].autor> %> </span>
-						<a href="noticia.html" class="noticia_titulo"> <%= noticia[i].titulo> %> </a>
-						<span class="noticia_data"> <%= noticia[i].data_criacao %> </span>
+						<span class="noticia_autor"> <%= noticias[i].autor %> </span>
+						<a href="noticia.html" class="noticia_titulo"> <%= noticias[i].titulo %> </a>
+						<span class="noticia_data"> <%= noticias[i].data_criacao %> </span>
 						<br />
 						<p class="noticia_resumo">
-							<%= noticia[i].resumo> %>
+							<%= noticias[i].resumo%>
 						</p>
 					</div>
 				</div>
 				<% } %>
-
-	    	<div class="row">
-	    		<div class="col-md-4">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-
-	    		<div class="col-md-4">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-
-	    		<div class="col-md-4">
-	    			<div class="noticia_wrapper">
-		    			<span class="noticia_autor">Por Jorge</span>
-		    			<a href="noticia.html" class="noticia_titulo">Título da notícia</a>
-		    			<span class="noticia_data">07/09/2016</span>
-
-		    			<br />
-		    			<p class="noticia_resumo">
-		    				Aqui fica o resumo da notícia com um limite de 100 caracteres!
-		    			</p>
-		    		</div>
-		    	</div>
-	    	</div>
 
 	    	<div class="row ver_mais">
 	    		<button type="button" class="btn btn-default"><a href="noticias.html">Ver todas as notícias</a></button>
